style(tests): fix code formatting with Spotless